log
Thu 11 May 2023 08:53:09 PM UTC: 
 tests:  0|4
total_score: 0/70
f728372
Thu 11 May 2023 09:31:14 PM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|4
total_score: 0/70
e3b349b
Thu 11 May 2023 09:32:14 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f96ce1e
Thu 11 May 2023 09:33:42 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
4fd00e1
Thu 11 May 2023 09:34:22 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|3
total_score: 10/70
9ce915d
Fri 12 May 2023 05:25:49 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
42c3c68
Fri 12 May 2023 05:28:04 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:23: error: incompatible types when returning type ‘heapElem’ {aka ‘struct nodo’} but ‘void *’ was expected
   22 |   return pq->heapArray[0];
      |          ~~~~~~~~~~~~~^~~
heap.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
   23 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
cddc04e
Fri 12 May 2023 05:29:28 PM UTC: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:31: error: expected ‘;’ before ‘}’ token
   21 |   return pq->heapArray[0].data
      |                               ^
      |                               ;
   22 | }
      | ~                              
Compilation failed
4febf9e
Fri 12 May 2023 05:29:39 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
4756ead
Fri 12 May 2023 05:34:51 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|3
total_score: 10/70
59a8343
Fri 12 May 2023 05:35:14 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
521c555
Fri 12 May 2023 06:18:09 PM UTC: 
 heap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:29:34: error: expected ‘;’ before ‘pq’
   29 |     pq->capac = 2 * pq->capac + 1
      |                                  ^
      |                                  ;
   30 |     pq->heapArray = (heapElem*) realloc(pq->heapArray, sizeof(heapElem) * pq->capac);
      |     ~~                            
Compilation failed
302556f
Fri 12 May 2023 06:18:23 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
9a9599a
Fri 12 May 2023 06:42:33 PM UTC: 
 heap.c | 34 ++++++++++++++++++++++++++++++++++
 1 file changed, 34 insertions(+)
 tests:  0|0
e629337
Fri 12 May 2023 06:43:40 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e5be7df
Fri 12 May 2023 06:49:05 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|0
total_score: 70/70
e6aa460
